# resvolt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
examples/: counter.rs  ping_pong.rs  word_blacklist.rs
src/: api_permissions.rs  cache.rs  error.rs  http.rs  lib.rs  state.rs  websocket.rs
src/builders/: channel.rs  message.rs  server.rs  user.rs
src/client/: action.rs  command.rs  command_registry.rs  context.rs  error_handler.rs  event_handler.rs  mod.rs
src/models/: attachment.rs  mod.rs
src/models/channel/: direct_message.rs  group.rs  mod.rs  text.rs  voice.rs
src/models/events/: client_event.rs  ready.rs  user_update.rs
src/models/events/channel/: ack.rs  delete.rs  group_join.rs  group_leave.rs  start_typing.rs  stop_typing.rs  update.rs
src/models/events/message/: delete.rs  update.rs
src/models/events/server/: delete.rs  member_join.rs  member_leave.rs  member_update.rs  role_delete.rs  role_update.rs  update.rs
src/models/message/: content.rs  mod.rs
src/models/server/: category.rs  flags.rs  member.rs  mod.rs  permissions.rs  system_message_channels.rs
src/models/user/: badges.rs  bot_information.rs  flags.rs  mod.rs  status.rs
